# tangram

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
base/: CMakeLists.txt  actor.hpp  color.hpp  get_ip.hpp  magic.hpp  message.cpp  message.hpp  node.cpp  node.hpp  sarray_binstream.cpp  sarray_binstream.hpp  (+2 more)
comm/: sender.cpp  (+17 more)
core/: CMakeLists.txt  abstract_collection_map.hpp  abstract_key_to_part_mapper.hpp  abstract_map_output.hpp  abstract_output_manager.hpp  abstract_partition.hpp  abstract_partition_manager.hpp  collection.hpp  collection_map.hpp  engine.cpp  engine.hpp  engine_elem.hpp  engine_test.cpp  hash_key_to_part_mapper.hpp  hash_key_to_part_mapper_test.cpp  indexed_seq_partition.hpp  indexed_seq_partition_test.cpp  join_actor.hpp  map_output.hpp  output_manager.hpp  partition.hpp  partition_manager.cpp  partition_manager.hpp  partition_manager_test.cpp  partitioned_map_output.hpp  partitioned_map_output_test.cpp  plan.hpp  plan_item.hpp  plan_test.cpp  program_context.hpp  progress_tracker.cpp  progress_tracker.hpp  progress_tracker_test.cpp  queue_node_map.hpp  seq_partition.hpp  seq_partition_test.cpp  shuffle_meta.hpp  thread_pool.cpp  thread_pool.hpp  thread_pool_test.cpp  (+2 more)
core/cache/: abstract_cache.hpp  abstract_fetcher.hpp  abstract_partition_cache.hpp  bin_to_part_mappers.hpp  fetcher.cpp  fetcher.hpp  fetcher_test.cpp  partition_cache.cpp  partition_cache.hpp  partition_cache_test.cpp  typed_cache.hpp
core/executor/: abstract_executor.hpp  executor.cpp  executor.hpp  executor_test.cpp  thread_pool.cpp  thread_pool_test.cpp
core/index/: abstract_key_to_part_mapper.hpp  abstract_part_to_node_mapper.hpp  hash_key_to_part_mapper.hpp  hash_key_to_part_mapper_test.cpp  hash_part_to_node_mapper.hpp  hash_part_to_node_mapper_test.cpp  key_to_part_mappers.hpp  part_to_node_manager.cpp  part_to_node_manager.hpp  part_to_node_manager_test.cpp  range_key_to_part_mapper.hpp  simple_part_to_node_mapper.hpp
core/map_output/: abstract_map_output.hpp  map_output.hpp  map_output_storage.cpp  map_output_storage.hpp  map_output_stream.hpp  map_output_stream_store.hpp  partitioned_map_output.hpp  partitioned_map_output_helper.hpp  partitioned_map_output_helper_test.cpp  partitioned_map_output_test.cpp
core/partition/: abstract_fetcher.hpp  abstract_map_progress_tracker.hpp  abstract_partition.hpp  abstract_partition_manager.hpp  block_partition.hpp  fetcher.cpp  fetcher.hpp  fetcher_test.cpp  file_partition.hpp  indexed_seq_partition.hpp  indexed_seq_partition_test.cpp  partition_manager.cpp  partition_manager.hpp  partition_manager_test.cpp  partition_tracker.cpp  partition_tracker.hpp  partition_tracker_test.cpp  range_indexed_seq_partition.hpp  seq_partition.hpp  seq_partition_test.cpp  task_timer.hpp  tracker.hpp  versioned_partition.hpp
core/plan/: abstract_function_store.hpp  checkpoint.hpp  collection.hpp  collection_builder.hpp  collection_builder_spec.hpp  collection_spec.hpp  context.cpp  context.hpp  dag.cpp  dag.hpp  dag_test.cpp  distribute.hpp  function_store.cpp  function_store.hpp  function_store_test.cpp  join_helper.hpp  load.hpp  load_checkpoint.hpp  load_plan_spec.hpp  mapjoin.hpp  mapjoin_mergecombine.hpp  mapjoin_mergecombine_test.cpp  mapjoin_test.cpp  mappartjoin.hpp  mappartupdate.hpp  mappartwithjoin.hpp  mappartwithupdate.hpp  mapupdate.hpp  mapupdate_test.cpp  mapwithjoin.hpp  mapwithjoin_test.cpp  mapwithupdate.hpp  mapwithupdate_test.hpp  plan.hpp  plan.hpp.orig  plan_base.hpp  plan_item.hpp  plan_spec.hpp  plan_test.cpp  plan_with.hpp  (+7 more)
core/scheduler/: block_manager.cpp  block_manager.hpp  checkpoint_loader.cpp  checkpoint_loader.hpp  checkpoint_manager.cpp  checkpoint_manager.hpp  collection_manager.cpp  collection_manager.hpp  collection_status.cpp  collection_status.hpp  collection_view.hpp  control.cpp  control.hpp  control_manager.cpp  control_manager.hpp  dag_runner.cpp  dag_runner.hpp  distribute_manager.cpp  distribute_manager.hpp  recover_manager.cpp  recover_manager.hpp  scheduler.cpp  scheduler.hpp  scheduler_elem.cpp  scheduler_elem.hpp  scheduler_test.cpp  worker.cpp  worker.hpp  worker_test.cpp  write_manager.cpp  write_manager.hpp
core/worker/: abstract_plan_controller.hpp  controller.cpp  controller.hpp  controller_test.cpp  delayed_combiner.cpp  delayed_combiner.hpp  plan_controller.cpp  plan_controller.hpp  plan_controller_test.cpp
examples/: CMakeLists.txt  a.cpp  crawler.cpp  crawler_util.py  graph_matching.cpp  load_example.cpp  logistic_regression.cpp  mailbox_example.cpp  nomad.cpp  nomad2.cpp  pagerank-converge.cpp  pagerank.cpp  pagerank_with.cpp  scheduler_example.cpp  scheduler_main.cpp  simple_example.cpp  sssp.cpp  test_cp.cpp  test_fetch.cpp  test_lb.cpp  tfidf.cpp  tfidf_lr.cpp  tfidf_v2.cpp  worker_example.cpp
examples/kmeans/: CMakeLists.txt  kmeans.cpp  kmeans_helper.hpp  kmeans_row.cpp
examples/lr/: CMakeLists.txt  basic_lr.hpp  dense_lr.cpp  dense_lr_2.cpp  dense_lr_row.cpp  sparse_lr.cpp
examples/pagerank/: CMakeLists.txt  compare_pr.cpp  compare_pr.py  pagerank-converge-bsp.cpp  pagerank-converge-bsp.py  pagerank-converge.cpp  pagerank-converge.py  pagerank.cpp  pagerank_with.cpp  sum.cpp  sum.py
examples/tfidf/: CMakeLists.txt  tfidf.cpp  tfidf.py  tfidf2.cpp  tfidf3.cpp  tfidf_v2.cpp  wordcount.cpp  wordcount.py
io/: CMakeLists.txt  abstract_block_reader.hpp  abstract_browser.hpp  abstract_reader.hpp  abstract_writer.hpp  assigner.cpp  assigner.hpp  assigner_test.cpp  block_reader_wrapper.cpp  block_reader_wrapper.hpp  block_reader_wrapper_test.cpp  fake_block_reader.hpp  fake_reader.hpp  fake_writer.hpp  hdfs_assigner.cpp  hdfs_assigner.hpp  hdfs_assigner_main.cpp  hdfs_block_reader.cpp  hdfs_block_reader.hpp  hdfs_block_reader_main.cpp  hdfs_browser.cpp  hdfs_browser.hpp  hdfs_helper.hpp  hdfs_loader.cpp  hdfs_loader.hpp  hdfs_manager.cpp  hdfs_manager.hpp  hdfs_reader.cpp  hdfs_reader.hpp  hdfs_reader_main.cpp  hdfs_writer.cpp  hdfs_writer.hpp  hdfs_writer_main.cpp  io_wrapper.cpp  io_wrapper.hpp  io_wrapper_test.cpp  loader.cpp  loader.hpp  loader_test.cpp  meta.hpp  (+9 more)
(+40 files in other folders)
